# painless

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
editor/: main.py  start.sh
editor/static/: style.css
editor/templates/: base.html
include/painless/: parameter.h
tests/: .ignore  CMakeLists.txt  example.cpp  interactive.cpp  parameter.cpp
